# pycctek

./: MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: semgrep.yml
cctek/: __init__.py  cardchecker.py  commands.py  dataloader.py  magnet.py
cctek/data/: all_files.yml
data/: all_defined_bins.txt
